# DisplayStream

./: Cargo.toml  README.md
src/: controller.rs  handler.rs  main.rs  scr.rs
src/assets/: controller.js  index.html  main.js
