[package]
name = "highsocks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version="1.0", features=["full"]} 
image = "0.25.10"
enigo = "0.6.1"
xcap = "0.9.4"
stream = "0.1.0"
futures = "0.3.32"
serde = { version = "1.0" , features = ["derive"]}
imageproc = "0.26.1"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[profile.release]
opt-level = 'z'     # Оптимизация по размеру (z или s)
lto = true          # Link Time Optimization (вырезает неиспользуемый код библиотек)
panic = 'abort'     # Убирает код для "красивого" завершения при панике
strip = true        # Автоматически удаляет символы отладки из файла

